hphp/test/slow/rx/multiple_reactivity5.php.expectf
Fatal error: Only one of following annotations is allowed: `__Pure`, `__Rx`, `__RxShallow`, `__RxLocal`, `__NonRx`, `__Cipp`, `__CippLocal`. in %s/test/slow/rx/multiple_reactivity5.php on line 3
